# qwise

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  demo.py  demo_onnx.py  demo_stream.py  drone_noise_mix.py  final.py  improve_audio.py  mwf.py  random_noise.py  recon.py  requirements.txt  run_demo.py  silero_vad_16k_recon.onnx  silero_vad_16k_recon.onnx.data  vad_analyzer.py
datasets/: README.md
docs/: Q-WiSE Project Description and Planning.md  index.html  threshold.md
lab/: README.md  (+3 more)
qwise_sim/: Cargo.toml  README.md
qwise_sim/src/: main.rs
simulator/acoustic_simulator_py/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
simulator/acoustic_simulator_py/backend/: __init__.py
simulator/acoustic_simulator_py/backend/api/: __init__.py  app.py  cleanup.py  pipeline.py  ratelimit.py  recordings.py  rest.py  settings.py  uploads.py  ws_stream.py
simulator/acoustic_simulator_py/backend/audio/: __init__.py  io.py  loops.py
simulator/acoustic_simulator_py/backend/config/: __init__.py  default.py
simulator/acoustic_simulator_py/backend/core/: __init__.py  geometry.py  source_mixer.py
simulator/acoustic_simulator_py/backend/mwf/: __init__.py  align_vad.py  apply_beamformer.py  build_speech_mask.py  estimate_covariance.py  gain_map.py  mwf.py  stft.py  weights.py  wiener_postfilter.py
simulator/acoustic_simulator_py/backend/vad/: __init__.py  dispatcher.py  energy.py  qwise.py
simulator/acoustic_simulator_py/frontend/: README.md  index.html
simulator/acoustic_simulator_py/frontend/static/: app.js  audio.js  fft.js  plots.js  recordings.js  session.js  sidebar.js  styles.css  upload.js
simulator/acoustic_simulator_py/models/: README.md
simulator/acoustic_simulator_py/scripts/: verify_hf_config.py
simulator/acoustic_simulator_py/tests/: test_api_ratelimit.py  test_api_recordings.py  test_api_rest.py  test_api_uploads.py  test_api_ws.py  test_audio.py  test_cleanup.py  test_config.py  test_frontend.py  test_frontend_session_simulated.py  test_geometry.py  test_hf_space_config.py  test_mwf_batch.py  test_mwf_streaming.py  test_ratelimit.py  test_smoke.py  test_source_mixer.py  test_source_mixer_update_geometry.py  test_vad_dispatcher.py  test_vad_energy.py  test_vad_qwise.py
simulator/acoustic_simulator_py/wavs/: README.md
(+97 files in other folders)
