[package]
name = "qwise_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
# Audio File I/O
hound = "3.5"

# Fast Fourier Transform (no_std compatible)
microfft = "0.6"

# Complex number support
num-complex = "0.4"

axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"