[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwise-acoustic-simulator"
version = "0.1.0"
description = "Q-WiSE acoustic simulator — Python port of the MATLAB reference, served as a FastAPI + WebSocket web demo."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Javad Rajabzadeh", email = "ja7ad@live.com" }]

# Runtime deps. Pinned ranges, not exact versions, so HuggingFace Spaces can
# pick the security-patched build. See requirements.txt for the lock used at
# Docker build time.
dependencies = [
  "fastapi>=0.111,<0.116",
  "uvicorn[standard]>=0.30,<0.33",
  "websockets>=12.0,<14.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "numpy>=1.26,<2.2",
  "scipy>=1.13,<1.15",
  "soundfile>=0.12,<0.14",
  "onnxruntime>=1.18,<1.20",
  "python-multipart>=0.0.9",
  "anyio>=4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "httpx>=0.27",
]
metrics = [
  # Optional perceptual-quality metrics (PESQ / STOI / SNRI).
  # Skipped on the default install because pesq has a heavy C build.
  "pesq>=0.0.4",
  "pystoi>=0.4",
]

[project.scripts]
qwise-simulator = "backend.api.app:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "recordings*", "frontend*", "models*", "wavs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]  # we wrap long DSP expressions on purpose

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
